--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -1,43 +1,37 @@
 name: Fetch Genshin Updates
 
-# 毎日0時に自動実行、手動トリガーも可
 on:
-  schedule:
+  workflow_dispatch:   # 手動実行用
+  schedule:           # 毎日0時に自動実行
     - cron: '0 0 * * *'
-  workflow_dispatch:
 
 jobs:
   fetch:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. リポジトリをチェックアウト
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2. Pythonセットアップ
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'  # 必要に応じて変更
+          python-version: '3.11'
 
-      # 3. ライブラリインストール
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install requests beautifulsoup4
 
-      # 4. スクレイピング実行
-      - name: Fetch Genshin updates
+      - name: Run scraping script
         run: python scripts/fetch_genshin.py
 
-      # 5. JSONをコミット＆push
       - name: Commit and push JSON
         run: |
-          # ここは自分のGitHubユーザー名・メールに置き換えてください
-          git config --global user.name "kakuu"  
-          git config --global user.email "kakuu2@gmail.com"  
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
 
           git add data/result.json
           git commit -m "Update Genshin data" || echo "No changes to commit"
-          git push
+
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
