--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}   # ← これが重要
 
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -34,4 +36,4 @@ jobs:
           git add data/result.json
           git commit -m "Update Genshin data" || echo "No changes to commit"
 
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/Xin-Xine/social-game-tracker.git HEAD:main
+          git push origin HEAD:main  # ← checkout に token 渡しているのでこれで 403 は出ない
