--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -1,8 +1,8 @@
-name: Fetch Game Updates with Gemini
+name: Fetch Genshin Updates
 
 on:
-  workflow_dispatch:
-  schedule:
+  workflow_dispatch:   # 手動実行用
+  schedule:           # 毎日0時に自動実行
     - cron: '0 0 * * *'
 
 jobs:
@@ -21,17 +21,17 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests
+          pip install requests beautifulsoup4 google-genai
 
-      - name: Run AI scraping script
-        env:
-          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+      - name: Run scraping script
         run: python scripts/fetch_with_gemini.py
 
       - name: Commit and push JSON
         run: |
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
+
           git add data/result.json
-          git commit -m "Update game data" || echo "No changes"
+          git commit -m "Update Genshin data" || echo "No changes to commit"
+
           git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:main
