--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -8,8 +8,6 @@ on:
 jobs:
   fetch:
     runs-on: ubuntu-latest
-    env:
-      GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}  # ここで API キーを設定
 
     steps:
       - name: Checkout repository
@@ -23,9 +21,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests beautifulsoup4 google-generativeai
+          pip install google-generativeai
 
       - name: Run scraping script
+        env:
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: python scripts/fetch_with_gemini.py
 
       - name: Commit and push JSON
