--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install google-genai
+          pip install google-genai requests beautifulsoup4
 
       - name: Run scraping script
         env:
